fix members box align

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -191,11 +191,12 @@ main{
 .member{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: flex-start;
     min-width: 325px;
     max-width: 325px;
     margin-bottom: 70px;
+    height: 510px;
 }
 .member img{
     width: 100%;
@@ -205,7 +206,7 @@ main{
     font-family: Montserrat;
     font-size: 0.9rem;
     font-weight: 500;
-    margin-top: 20px;
+    margin-top: 5%;
 }
 
 
